fix: update profile text align

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -33,6 +33,10 @@
     margin-top: 4em;
 }
 
+.profile-text {
+    text-align: left;
+}
+
 .profile p {
     font-size: 1.25rem;
     margin: auto 0;
